# qosmic

./: Cargo.toml  README.md  app.rc  build.rs  script.py
src/: components.rs  constants.rs  core.rs  encode.rs  lib.rs  main.rs  primitives.rs  qosmic.rs  qosmic_lib.h  utils.rs
