[package]
name = "qosmic_512"
version = "0.3.0"
edition = "2021"
authors = ["dotslashCosmic"]
description = "Qosmic-512 Hashing Utility"
copyright = "GNU GPLv3, 2025"

[dependencies]
hex = "0.4"
rand = "0.8"
ndarray = "0.15"
num-bigint = "0.4"
num-traits = "0.2"
base36 = "0.0.1"
base64 = "0.21.0"
bs58 = "0.5.0"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
winres = "0.1"
toml = "0.8.23"
